@@ -208,7 +208,7 @@ RoboHydraHead.prototype._handle = function(req, res, next) {
 
 // Convenience function to create new types of heads. It takes care of
 // a bit of inheritance hassle.
-function roboHydraHeadType(settings) {
+function robohydraHeadType(settings) {
     var parentClass = settings.parentClass || RoboHydraHead;
 
     var newConstructorFunction = function(props) {
@@ -250,6 +250,10 @@ function roboHydraHeadType(settings) {
 
     return newConstructorFunction;
 }
+function roboHydraHeadType(settings) {
+    deprecationWarning("deprecated 'roboHydraHeadType', please use 'robohydraHeadType' instead");
+    return robohydraHeadType(settings);
+}
 
 
 function _nextIndex(currentIndex, numberResponses, repeatMode) {
@@ -259,7 +263,7 @@ function _nextIndex(currentIndex, numberResponses, repeatMode) {
 }
 
 var responseProperties = ['content', 'contentType', 'statusCode', 'headers'];
-var RoboHydraHeadStatic = roboHydraHeadType({
+var RoboHydraHeadStatic = robohydraHeadType({
     name: 'static',
     defaultPropertyObject: {content: ''},
 
@@ -332,7 +336,7 @@ var RoboHydraHeadStatic = roboHydraHeadType({
 });
 
 
-var RoboHydraHeadMounted = roboHydraHeadType({
+var RoboHydraHeadMounted = robohydraHeadType({
     name: 'generic-mounted',
     defaultPropertyObject: {mountPath: '/', handler: function(_, res) {res.end();}},
 
@@ -370,7 +374,7 @@ RoboHydraHeadMounted.prototype._matchesUrlPath = function(path) {
 };
 
 
-var RoboHydraHeadFilesystem = roboHydraHeadType({
+var RoboHydraHeadFilesystem = robohydraHeadType({
     name: 'filesystem',
     parentClass: RoboHydraHeadMounted,
     defaultPropertyObject: {documentRoot: '/tmp'},
@@ -399,7 +403,7 @@ var RoboHydraHeadFilesystem = roboHydraHeadType({
     }
 });
 
-var RoboHydraHeadProxy = roboHydraHeadType({
+var RoboHydraHeadProxy = robohydraHeadType({
     name: 'proxy',
     parentClass: RoboHydraHeadMounted,
     defaultPropertyObject: {proxyTo: 'http://example.com'},
@@ -431,7 +435,7 @@ var RoboHydraHeadProxy = roboHydraHeadType({
     }
 });
 
-var RoboHydraHeadFilter = roboHydraHeadType({
+var RoboHydraHeadFilter = robohydraHeadType({
     name: 'filter',
     defaultPropertyObject: {filter: function(body) { return body; }},
 
@@ -512,7 +516,7 @@ RoboHydraHeadFilter.prototype._compressionAwareFilter =
     };
 
 
-var RoboHydraHeadWatchdog = roboHydraHeadType({
+var RoboHydraHeadWatchdog = robohydraHeadType({
     name: 'watchdog',
     defaultPropertyObject: {watcher: function() { return false; }},
 
@@ -597,6 +601,7 @@ RoboHydraHeadWatchdog.prototype._uncompress =
 
 
 exports.InvalidRoboHydraHeadException = InvalidRoboHydraHeadException;
+exports.robohydraHeadType = robohydraHeadType;
 exports.roboHydraHeadType = roboHydraHeadType;
 exports.RoboHydraHead = RoboHydraHead;
 exports.RoboHydraHeadStatic = RoboHydraHeadStatic;
